bk_ida/gccida/g1/store_bit_field
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:755:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode fieldmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:763:4: error: expected ';' after expression
rtx v12; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:763:5: error: use of undeclared identifier 'v12'
rtx v12; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:769:36: error: redefinition of parameter 'rtx'
 struct rtx_def *(  *genfun)( rtx, rtx); // rbp 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:769:31: error: a parameter list without types is only allowed in a function definition
 struct rtx_def *(  *genfun)( rtx, rtx); // rbp 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:772:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode best_mode; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:778:4: error: expected ';' after expression
rtx v28; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:778:5: error: use of undeclared identifier 'v28'
rtx v28; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:791:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:797:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:801:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:807:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmpc; // [rsp+8h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:811:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode maxmodeb; // [rsp+10h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:812:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode maxmodec; // [rsp+10h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:841:1: error: use of undeclared identifier 'v12'
v12 = protect_from_queue( value, 0); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:846:22: error: use of undeclared identifier 'v12'
v12 = force_not_mem( v12); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:846:1: error: use of undeclared identifier 'v12'
v12 = force_not_mem( v12); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:879:22: error: use of undeclared identifier 'v12'
emit_move_insn( rtx, v12); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/expmed.c:880:8: error: use of undeclared identifier 'v12'
return v12; 
       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_bit_field/src/obj/expmed.o] Error 1
